--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,13 @@ ul{
     padding: .7em 1em;
 }
 
+.wave-img{
+    background-image: url(../img/wave.svg);
+    width: 100%;
+    height: 100px;
+}
+
+
 /* HEADER */
 .box-header{
     width: 100%;
