--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ ul{
 .jumbo{
     font-size: 1rem;
     border-radius: 22px;
-    
+    margin-right: .8em;
 }
 .two{
     background-color: black;
@@ -66,11 +66,19 @@ ul{
     padding: .7em 1em;
 }
 
-.wave-img{
-    background-image: url(../img/wave.svg);
+/* _____Wave________ */
+.wave-1hkxOo{
     width: 100%;
-    height: 100px;
+    fill: #f6f6f6;
+    vertical-align: bottom;
 }
+.wave-one{
+    fill:#f6f6f6;
+    transform: rotate(180deg);
+    vertical-align: top;
+}
+/* _____End Wave_____ */
+
 
 
 /* HEADER */
@@ -147,24 +155,12 @@ ul{
     justify-content: center;
 }
 
-/* ____Wave______ */
-/* .onda{
-    width: 100%;
-    min-height: 150px;
-    
-    object-fit: contain;
-    
-}
-.onda img{
-    width: 100%;
-    
-    
-} */
+
 
 /* MAIN */
 .box-main{
     width: 100%;
-    padding: 1.2em 0em;
+    
    
 }
 .box-row{
