--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
 html{
     font-family: 'Whitney';
 }
-.padding{
+/* .padding{
     padding: 1em;
-}
+} */
 .padding-footer{
     padding: 0.1em .5em;
 }
@@ -28,6 +28,10 @@ a{
     text-decoration: none;
     color: white;
     font-weight: 600;
+}
+.c-w{
+    color: white;
+    font-size: .8rem;
 }
 span{
     color: white;
@@ -101,7 +105,7 @@ ul{
     width: 20%;
 }
 .logo-header img{
-    width: 70%;
+    max-width: 100%;
 }
 .top-header .login-header{
     width: 20%;
@@ -178,7 +182,6 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    min-height: 470px;
     padding-top: 4.5em;
 }
 .row-two > .row-text h2{
@@ -198,7 +201,7 @@ ul{
     justify-content:center;
 }
 .row-one img{
-    width: 85%;
+    max-width: 100%;
     
 }
 
